// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignDidExtrinsic should render add endpoint extrinsic 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Add Service Endpoint
    </h1>
    <p
      class="subline"
    >
      Sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:light:004oUiK3EvTczc6ukYLEV57BuxzkW9zksKRchZXYGSocLmWE5N"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <dl
      class="endpointDetails"
    >
      <div
        class="fullWidthDetail"
      >
        <dt
          class="endpointName"
        >
          URL
        </dt>
        <dd
          class="endpointValue"
        >
          https://sporran.org
        </dd>
      </div>
      <div
        class="endpointDetail"
      >
        <dt
          class="endpointName"
        >
          Type
        </dt>
        <dd
          class="endpointValue"
        >
          Some type
        </dd>
      </div>
      <div
        class="endpointDetail"
      >
        <dt
          class="endpointName"
        >
          Service ID
        </dt>
        <dd
          class="endpointValue"
        >
          123456
        </dd>
      </div>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
  </form>
</div>
`;

exports[`SignDidExtrinsic should render extrinsic 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Identity with on-chain DID and lots of coins
          </span>
        </div>
      </section>
      <a
        aria-label="Light DID Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Light DID Identity"
      />
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <dl
      class="details"
    >
      <dt
        class="detailName"
      >
        from
        :
      </dt>
      <dd
        class="detailValue"
        title="extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com"
      >
        extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com
      </dd>
      <dt
        class="detailName"
      >
        method data
        :
      </dt>
      <dd
        class="detailValue"
        title="namespace.method(input = "some meaningful values you would definitely like to see")"
      >
        namespace.method(input = "some meaningful values you would definitely like to see")
      </dd>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
  </form>
</div>
`;

exports[`SignDidExtrinsic should render forbidden DID extrinsic 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with DID
    </h1>
    <p
      class="subline"
    >
      Select your Identity and sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Identity with on-chain DID and lots of coins
          </span>
        </div>
      </section>
      <a
        aria-label="Light DID Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Light DID Identity"
      />
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <dl
      class="details"
    >
      <dt
        class="detailName"
      >
        from
        :
      </dt>
      <dd
        class="detailValue"
        title="extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com"
      >
        extremely-long-domain-name-tries-to-overflow-all-available-space-and-just-keeps-going-and-going-and-going.com
      </dd>
      <dt
        class="detailName"
      >
        method data
        :
      </dt>
      <dd
        class="detailValue"
        title="namespace.method(input = "some meaningful values you would definitely like to see")"
      >
        namespace.method(input = "some meaningful values you would definitely like to see")
      </dd>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        disabled=""
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
      >
        This DID call is forbidden
      </output>
    </p>
  </form>
</div>
`;

exports[`SignDidExtrinsic should render remove endpoint extrinsic 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Remove Service Endpoint
    </h1>
    <p
      class="subline"
    >
      Sign with your password
    </p>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="centeredNameLine"
        >
          <span
            class="name"
          >
            Identity with on-chain DID and lots of coins
          </span>
        </div>
      </section>
      <a
        aria-label="Light DID Identity"
        class="left"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Light DID Identity"
      />
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="right"
        href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble bubbleActive"
            href="/?data=eyJkQXBwTmFtZSI6ImRBcHAiLCJvcmlnaW4iOiJodHRwczovL2V4YW1wbGUub3JnL2ZvbyIsImV4dHJpbnNpYyI6IjB4MWMwNDI2MDAwYzY2NmY2ZiIsInN1Ym1pdHRlciI6IjR0TU1ZWkhzRmZxemZDc2dDUExKU0Jtb21CdjJkNmNCRVl6SEtNR1ZLejJWakFDUiJ9"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4oeJ76hdj84xnwCNqijUHUCTmfwXgSZ4vmxLEiTEYgQdBCcZ"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <dl
      class="endpointDetails"
    >
      <div
        class="fullWidthDetail"
      >
        <dt
          class="endpointName"
        >
          URL
        </dt>
        <dd
          class="endpointValue"
        >
          https://sporran.org
        </dd>
      </div>
      <div
        class="endpointDetail"
      >
        <dt
          class="endpointName"
        >
          Type
        </dt>
        <dd
          class="endpointValue"
        >
          Some type
        </dd>
      </div>
      <div
        class="endpointDetail"
      >
        <dt
          class="endpointName"
        >
          Service ID
        </dt>
        <dd
          class="endpointValue"
        >
          123456
        </dd>
      </div>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="reject"
        type="button"
      >
        Reject
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
  </form>
</div>
`;
